--- a/lolTradeGame/src/main/webapp/style/gamelobby.css
+++ b/lolTradeGame/src/main/webapp/style/gamelobby.css
@@ -1,88 +1,122 @@
 @charset "UTF-8";
 
 .bg {
-	background-image: url('../img/gameflow-background.jpg');
+	background: url('../img/home.png');
 	background-size: cover;
-	width: 1280px;
-	height: 720px;
-	position: relative;
-
 }
 
-.menu {
-	background-image: url('../img/menubar.png');
-	background-size: cover;
-	background-repeat: no-repeat;
-	position: absolute;
-	width: 1280px;
-	height: auto;
-	top: 0%;
-	right: 0%;
+.lobbypaper {
+	background: url('../img/gamelobby.png');
+	background-size: contain;
+	width: 82%;
+	height: 88%;
+	margin: 0% 0% 0%;
+	
+}
+.champion{
+	width: 100%;
+	height: 88%;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	display: flex;
+	text-align: center;
+}
+.top{
+	background: url('../img/liner-lobby.png') no-repeat center center;
+	background-size: contain;
+	width: 20%;
+	height: 85%;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	border: none;
+}
+.jungle{
+	background: url('../img/liner-lobby.png') no-repeat center center;
+	background-size: contain;
+	width: 20%;
+	height: 85%;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	border: none;
+}
+.mid{
+	background: url('../img/liner-lobby.png') no-repeat center center;
+	background-size: contain;
+	width: 20%;
+	height: 85%;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	border: none;
+}
+.adc{
+	background: url('../img/liner-lobby.png') no-repeat center center;
+	background-size: contain;
+	width: 20%;
+	height: 85%;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	border: none;
+}
+.supp{
+	background: url('../img/liner-lobby.png') no-repeat center center;
+	background-size: contain;
+	width: 20%;
+	height: 85%;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	border: none;
+}
+.go-action {
+	width: 100%;
+	height: 15%;
+	margin: 0% 0% 0% 0%;
+	border: none;
+	display: flex;
+	text-align: center;
 }
 
-.money {
-	position: absolute;
-	top: 70%;
-	left: 80%;
-	width: 150px;
-	height: 130px;
+.back-select {
+	cursor: pointer;
+	background: url('../img/lobby-homebtn.png') no-repeat center center;
+	background-size: contain;
+	width: 4%;
+	height: 35%;
+	border: none;
+	transition: transform 0.2s ease;
+	margin: 0% 0% 0% 37%;
+	padding: 0% 0% 0% 0%;
 }
-.gamestart {
-	position: absolute;
-	top: 20%;
-	right: 80%;
-	background: url('../img/startbnt.jpg') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 200px; /* 입력 상자의 너비 설정 */
-  	height: 50px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.home {
-	position: absolute;
-	top: 70%;
-	left: 30%;
-	background: url('../img/inmyinfobtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 50px; /* 입력 상자의 너비 설정 */
-  	height: 85px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-}
-.myinfo {
-	position: absolute;
-	top: 70%;
-	left: 55%;
-	background: url('../img/inmyinfobtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 50px; /* 입력 상자의 너비 설정 */
-  	height: 85px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
+.back-select:hover {
+	cursor: pointer;
+	background: url('../img/onlobby-homebtn.png') no-repeat center center;
+	background-size: contain;
+	width: 4%;
+	height: 35%;
+	border: none;
+	transition: transform 0.2s ease;
+	margin: 0% 0% 0% 37%;
+	padding: 0% 0% 0% 0%;
 }
 
-.collection {
-	position: absolute;
-	top: 32%;
-	left: 60%;
-	background: url('../img/incollerctionbtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 50px; /* 입력 상자의 너비 설정 */
-  	height: 85px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
+.start-go {
+	cursor: pointer;
+	background: url('../img/lobby-startbtn.png') no-repeat center center;
+	background-size: contain;
+	width: 20%;
+	height: 50%;
+	border: none;
+	transition: transform 0.2s ease;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
 }
-.shop {
-	position: absolute;
-	top: 32%;
-	left: 70%;
-	background: url('../img/instorebtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 50px; /* 입력 상자의 너비 설정 */
-  	height: 85px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-
-.Text {
-	width: 1px;
-	height: 1px;
+.start-go:hover {
+	cursor: pointer;
+	background: url('../img/onlobby-startbtn.png') no-repeat center center;
+	background-size: contain;
+	width: 20%;
+	height: 50%;
+	border: none;
+	transition: transform 0.2s ease;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
 }
