--- a/lolTradeGame/src/main/webapp/style/gameselect.css
+++ b/lolTradeGame/src/main/webapp/style/gameselect.css
@@ -1,130 +1,105 @@
 @charset "UTF-8";
 
-.bg {
-	background-image: url('../img/battleselet.png');
-	background-size: cover;
-	width: 1280px;
-	height: 720px;
-	position: absolute;
+.bg {}
 
+.selectpaper {
+	background: url('../img/battleselet.png');
+	background-size: contain;
+	width: 82%;
+	height: 88%;
+	margin: 0.05% 0% 0% 0%;
 }
-.menu {
-	background-image: url('../img/menubar.png');
-	background-size: cover;
+
+.select-BestCategory {
+	width: 100%;
+	height: 50%;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+}
+
+.stick-select {
+	background-color: rgb(102, 109, 104);
+	width: 80%;
+	height: 0.2%;
+	margin: 0% 0% 0% 7%;
+	padding: 0% 0% 0% 0%;
+}
+
+.select-Subcategories {
+	width: 100%;
+	height: 35%;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+}
+
+.select-1 {
+	background: url('../img/select-1.png');
+	background-size: contain;
+	width: 15%;
+	height: 42%;
+	margin: 9% 0% 0% 25%;
 	background-repeat: no-repeat;
-	position: absolute;
-	width: 1280px;
-	height: 86px;
-	top: 0%;
-	right: 0%;
+	border: none;
+}
+.select-1:hover {
+	background: url('../img/select1-hover.png');
+	background-size: contain;
+	width: 15%;
+	height: 42%;
+	margin: 9% 0% 0% 25%;
+	background-repeat: no-repeat;
+	border: none;
+}
+.decision-box {
+	width: 100%;
+	height: 15%;
+	margin: 0% 0% 0% 0%;
+	border: none;
+	display: flex;
+	text-align: center;
+}
+.back-home {
+	cursor: pointer;
+	background: url('../img/back-homebtn.png') no-repeat center center;
+	background-size: contain;
+	width: 4%;
+	height: 40%;
+	border: none;
+	transition: transform 0.2s ease;
+	margin: 2% 0% 0% 43%;
+	padding: 0% 0% 0% 0%;
+}
+.back-home:hover {
+	cursor: pointer;
+	background: url('../img/onready-homebtn.png') no-repeat center center;
+	background-size: contain;
+	width: 4%;
+	height: 40%;
+	border: none;
+	transition: transform 0.2s ease;
+	margin: 2% 0% 0% 43%;
+	padding: 0% 0% 0% 0%;
 }
 
-.money {
-	position: absolute;
-	top: 3%;
-	left: 75%;
-	width: 150px;
-	height: 130px;
-	color: white;
+.lobby-go {
+	cursor: pointer;
+	background: url('../img/ready-lobbybtn.png') no-repeat center center;
+	background-size: contain;
+	width: 14%;
+	height: 40%;
+	border: none;
+	transition: transform 0.2s ease;
+	margin: 2% 0% 0% -0.5%;
+	padding: 0% 0% 0% 0%;
 }
-.gamestart {
-	position: absolute;
-	top: 3%;
-	right: 80%;
-	background: url('../img/startbnt.jpg') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 200px; /* 입력 상자의 너비 설정 */
-  	height: 50px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.gamestart:hover {
-	position: absolute;
-	top: 3%;
-	right: 80%;
-	background: url('../img/onstartbnt.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 200px; /* 입력 상자의 너비 설정 */
-  	height: 50px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.home {
-	position: absolute;
-	top: 0%;
-	left: 30%;
-	background: url('../img/inhomebtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-}
-.myinfo {
-	position: absolute;
-	top: 0%;
-	left: 60%;
-	background: url('../img/myinfobtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-}
-.myinfo:hover {
-	position: absolute;
-	top: 0%;
-	left: 60%;
-	background: url('../img/onmyinfobtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-}
-
-.collection {
-	position: absolute;
-	top: 0%;
-	left: 64%;
-	background: url('../img/collectionbtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.collection:hover {
-	position: absolute;
-	top: 0%;
-	left: 64%;
-	background: url('../img/oncollectionbtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.shop {
-	position: absolute;
-	top: 0%;
-	left: 68%;
-	background: url('../img/store.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.shop:hover {
-	position: absolute;
-	top: 0%;
-	left: 68%;
-	background: url('../img/onstorebtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.Text {
-	width: 1px;
-	height: 1px;
+.lobby-go:hover{
+	cursor: pointer;
+	background: url('../img/onready-lobbybtn.png') no-repeat center center;
+	background-size: contain;
+	width: 14%;
+	height: 40%;
+	border: none;
+	transition: transform 0.2s ease;
+	margin: 2% 0% 0% -0.5%;
+	padding: 0% 0% 0% 0%;
 }
