--- a/lolTradeGame/src/main/webapp/style/main.css
+++ b/lolTradeGame/src/main/webapp/style/main.css
@@ -1,157 +1,11 @@
 @charset "UTF-8";
 
-.bg {
-	background-image: url('../img/home.png');
-	background-size: cover;
-	width: 1280px;
-	height: 720px;
-}
-.money {
-	position: absolute;
-	top: 0%;
-	left: 75%;
-	width: 100px;
-	height: 50px;
-	color: white;
-}
+.bg {}
 
-.gamestart {
-	position: absolute;
-	top: 3%;
-	right: 80%;
-	background: url('../img/startbnt.jpg') no-repeat center center;
-	background-size: cover;
-	/* 이미지 크기 조절 */
-	width: 200px;
-	/* 입력 상자의 너비 설정 */
-	height: 50px;
-	/* 입력 상자의 높이 설정 */
-	border: none;
-	/* 테두리 제거 */
-	transition: transform 0.2s ease;
-}
-
-.gamestart:hover {
-	position: absolute;
-	top: 3%;
-	right: 80%;
-	background: url('../img/onstartbnt.png') no-repeat center center;
-	background-size: cover;
-	/* 이미지 크기 조절 */
-	width: 200px;
-	/* 입력 상자의 너비 설정 */
-	height: 50px;
-	/* 입력 상자의 높이 설정 */
-	border: none;
-	/* 테두리 제거 */
-	transition: transform 0.2s ease;
-}
-
-.home {
-	position: absolute;
-	top: 0%;
-	left: 30%;
-	background: url('../img/inhomebtn.png') no-repeat center center;
-	background-size: cover;
-	/* 이미지 크기 조절 */
-	width: 51px;
-	/* 입력 상자의 너비 설정 */
-	height: 84px;
-	/* 입력 상자의 높이 설정 */
-	border: none;
-	/* 테두리 제거 */
-}
-
-.myinfo {
-	position: absolute;
-	top: 0%;
-	left: 60%;
-	background: url('../img/myinfobtn.png') no-repeat center center;
-	background-size: cover;
-	/* 이미지 크기 조절 */
-	width: 51px;
-	/* 입력 상자의 너비 설정 */
-	height: 84px;
-	/* 입력 상자의 높이 설정 */
-	border: none;
-	/* 테두리 제거 */
-}
-
-.myinfo:hover {
-	position: absolute;
-	top: 0%;
-	left: 60%;
-	background: url('../img/onmyinfobtn.png') no-repeat center center;
-	background-size: cover;
-	/* 이미지 크기 조절 */
-	width: 51px;
-	/* 입력 상자의 너비 설정 */
-	height: 84px;
-	/* 입력 상자의 높이 설정 */
-	border: none;
-	/* 테두리 제거 */
-}
-
-.collection {
-	position: absolute;
-	top: 0%;
-	left: 64%;
-	background: url('../img/collectionbtn.png') no-repeat center center;
-	background-size: cover;
-	/* 이미지 크기 조절 */
-	width: 51px;
-	/* 입력 상자의 너비 설정 */
-	height: 84px;
-	/* 입력 상자의 높이 설정 */
-	border: none;
-	/* 테두리 제거 */
-	transition: transform 0.2s ease;
-}
-
-.collection:hover {
-	position: absolute;
-	top: 0%;
-	left: 64%;
-	background: url('../img/oncollectionbtn.png') no-repeat center center;
-	background-size: cover;
-	/* 이미지 크기 조절 */
-	width: 51px;
-	/* 입력 상자의 너비 설정 */
-	height: 84px;
-	/* 입력 상자의 높이 설정 */
-	border: none;
-	/* 테두리 제거 */
-	transition: transform 0.2s ease;
-}
-
-.shop {
-	position: absolute;
-	top: 0%;
-	left: 68%;
-	background: url('../img/store.png') no-repeat center center;
-	background-size: cover;
-	/* 이미지 크기 조절 */
-	width: 51px;
-	/* 입력 상자의 너비 설정 */
-	height: 84px;
-	/* 입력 상자의 높이 설정 */
-	border: none;
-	/* 테두리 제거 */
-	transition: transform 0.2s ease;
-}
-
-.shop:hover {
-	position: absolute;
-	top: 0%;
-	left: 68%;
-	background: url('../img/onstorebtn.png') no-repeat center center;
-	background-size: cover;
-	/* 이미지 크기 조절 */
-	width: 51px;
-	/* 입력 상자의 너비 설정 */
-	height: 84px;
-	/* 입력 상자의 높이 설정 */
-	border: none;
-	/* 테두리 제거 */
-	transition: transform 0.2s ease;
+.homepaper {
+	background: url('../img/homepaper.png');
+	background-size: contain;
+	width: 82%;
+	height: 88%;
+	margin: 0% 0% 0%;
 }
