--- a/lolTradeGame/src/main/webapp/style/menubar.css
+++ b/lolTradeGame/src/main/webapp/style/menubar.css
@@ -1,108 +1,365 @@
 @charset "UTF-8";
 
 body {
-    display: block;
-    margin: 0px;
+	display: block;
+	margin: 0px;
 }
+
 .stick {
 	background: #785a28;
 	background-size: cover;
 	width: 100%;
 	height: 1%;
 }
+
+.stick-bottom {
+	background: rgb(211, 206, 202);
+	background-size: cover;
+	width: 100%;
+	height: 0.5%;
+}
+
 .bg {
 	background: rgb(1, 10, 19);
 	background-size: cover;
 	width: 100%;
-	height:99%;
+	height: 99%;
 }
+
 .meunbar {
-	background: url('../img/menubar.png') no-repeat center center;
+	background: rgb(1, 10, 19);
+	background-repeat: no-repeat;
+	background-position: center center;
 	background-size: contain;
 	width: 100%;
 	height: 100%;
+	display: flex;
 	text-align: left;
-	
+	margin: 0% 0% 0%;
 }
+
 .money {
 	width: 100px;
 	height: 50px;
 	color: white;
+	padding: 1.8% 0% 0% 0%;
+	margin: 0% 0% 0% -1%;
+	font-size: 85%;
+}
+
+.gradation-on {
+	padding: 55% 0% 22% 0%;
+	background-image: rgb(1, 10, 19);
+	background-size: cover;
+	background-repeat: no-repeat;
+	color: #cdbe91;
+	width: 100%;
+	height: 95%;
+	opacity: 80%;
+	margin: -100% 0% -25% 0%;
+}
+
+.gradation2-on {
+	padding: 57% 0% 22% 0%;
+	background-image: rgb(1, 10, 19);
+	background-size: cover;
+	background-repeat: no-repeat;
+	color: #cdbe91;
+	width: 100%;
+	height: 95%;
+	opacity: 80%;
+	margin: -100% 0% -25% 0%;
+}
+
+.gradation-on:hover {
+	padding: 55% 0% 22% 0%;
+	background-image: linear-gradient(to top, rgb(50 48 42 / 23%)6%, rgb(144 140 136 / 58%)22%), radial-gradient(circle at 50% 135%, rgb(246 229 129)-11%, rgb(249 249 249)4%, rgb(49 57 48)39%, rgb(27 32 32)53%, rgb(20 30 36)53%);
+	background-size: 78% 2%, 100% 100%;
+	background-position: center bottom, bottom;
+	background-repeat: no-repeat;
+	color: rgb(253, 246, 219);
+	width: 100%;
+	height: 95%;
+	opacity: 80%;
+	margin: -100% 0% -25% 0%;
+}
+
+.gradation2-on:hover {
+	padding: 50% 0% 20% 0%;
+	background: linear-gradient(to top, rgb(50 48 42 / 23%)6%, rgb(144 140 136 / 58%)22%), radial-gradient(circle at 50% 135%, rgb(246 229 129)-11%, rgb(249 249 249)4%, rgb(49 57 48)39%, rgb(27 32 32)53%, rgb(20 30 36)53%);
+	background-size: 78% 2%, 100% 70%;
+	background-position: center bottom, bottom;
+	background-repeat: no-repeat;
+	color: rgb(253, 246, 219);
+	width: 100%;
+	height: 100%;
+	opacity: 80%;
+	margin: -90% 0% -25% 0%;
+}
+
+.gradation-in {
+	padding: 40% 0% 50% 0%;
+	background-image: radial-gradient(ellipse at 54% 132%, rgb(179, 159, 143)10%, rgb(77, 80, 77)20%, rgb(3, 13, 22)71%);
+	background-size: 100% 75%;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	color: rgb(253, 246, 219);
+	width: 100%;
+	height: 95%;
+	opacity: 80%;
+	margin: -97% 0% 0% 0%;
+}
+.gradation-in2 {
+	padding: 40% 0% 50% 0%;
+	background-image: radial-gradient(ellipse at 54% 132%, rgb(179, 159, 143)10%, rgb(77, 80, 77)20%, rgb(3, 13, 22)71%);
+	background-size: 100% 62%;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	color: rgb(253, 246, 219);
+	width: 100%;
+	height: 95%;
+	opacity: 80%;
+	margin: 0% 0% 0% 0%;
+}
+.tpoint {
+	background: url('../img/tpoint.png') no-repeat center center;
+	background-size: cover;
+	width: 61%;
+	height: 2%;
+	margin: -76% 0% 80% 22%;
+	padding: 30% 0% 4% 0%;
+}
+.tpoint2 {
+	background: url('../img/tpoint.png') no-repeat center center;
+	background-position: bottom;
+	background-size: contain;
+	width: 100%;
+	height: 18%;
+	margin: 0% 0% 0% 0%;
+	padding: 25% 0% 4% 0%;
 }
 .gamestart {
-	background: url('../img/startbnt.jpg') no-repeat center center;
+	cursor: pointer;
+	background: url('../img/startbtn.png') no-repeat center center;
 	background-size: cover;
-	width: 200px;
-	height: 50px;
+	width: 13.3%;
+	height: 54%;
 	border: none;
 	transition: transform 0.2s ease;
+	margin: 1.6% 5% 1% 2%;
 }
 
 .gamestart:hover {
-	background: url('../img/onstartbnt.png') no-repeat center center;
+	cursor: pointer;
+	background: url('../img/onstartbtn.png') no-repeat center center;
 	background-size: cover;
-	width: 200px;
-	height: 50px;
+	width: 13.3%;
+	height: 54%;
 	border: none;
 	transition: transform 0.2s ease;
+	margin: 1.6% 5% 1% 2%;
+}
+
+.gamestart-in {
+	background: url('../img/instartbtn.png') no-repeat center center;
+	background-size: cover;
+	width: 13.3%;
+	height: 54%;
+	border: none;
+	transition: transform 0.2s ease;
+	margin: 1.6% 5% 1% 2%;
+
 }
 
 .home {
-	background: url('../img/inhomebtn.png') no-repeat center center;
+	cursor: pointer;
+	background: rgb(1, 10, 19);
 	background-size: cover;
-	width: 51px;
-	height: 84px;
+	font-size: 140%;
+	width: 4%;
+	height: 100%;
 	border: none;
+	opacity: 100%;
+	padding: 3% 0% 0% 0%;
+	transition: transform 0.2s ease;
+	cursor: pointer;
 }
 
 .myinfo {
-	background: url('../img/myinfobtn.png') no-repeat center center;
+	cursor: pointer;
+	background: rgb(1, 10, 19);
 	background-size: cover;
-	width: 51px;
-	height: 84px;
+	width: 4%;
+	height: 100%;
 	border: none;
-}
-
-.myinfo:hover {
-	background: url('../img/onmyinfobtn.png') no-repeat center center;
-	background-size: cover;
-	width: 51px;
-	height: 84px;
-	border: none;
+	padding: 0% 0% 0% 0%;
+	margin: 0% 0.1% 0% 0.1%;
+	transition: transform 0.2s ease;
 }
 
 .collection {
-	background: url('../img/collectionbtn.png') no-repeat center center;
+	cursor: pointer;
+	background: rgb(1, 10, 19);
 	background-size: cover;
-	width: 51px;
-	height: 84px;
+	width: 4%;
+	height: 100%;
 	border: none;
+	padding: 0% 0% 0% 0%;
+	margin: 0% 0% 0% 0%;
 	transition: transform 0.2s ease;
 }
 
-.collection:hover {
-	background: url('../img/oncollectionbtn.png') no-repeat center center;
+.store {
+	cursor: pointer;
+	background: rgb(1, 10, 19);
 	background-size: cover;
-	width: 51px;
-	height: 84px;
+	width: 4%;
+	height: 100%;
 	border: none;
+	padding: 0% 0% 0% 0%;
+	margin: 0% 0% 0% 0%;
 	transition: transform 0.2s ease;
 }
 
-.shop {
-	background: url('../img/store.png') no-repeat center center;
-	background-size: cover;
-	width: 51px;
-	height: 84px;
+.in-myinfo-btn {
+	background-image: url('../img/inmyinfobtn.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%;
+	height: 100%;
 	border: none;
-	transition: transform 0.2s ease;
+	margin: 35% 0% -37% 0%;
+	padding: 43% 0% 0% 0%;
+	cursor: pointer;
+}
+.myinfo-btn {
+	background-image: url('../img/myinfobtn.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%;
+	height: 100%;
+	border: none;
+	margin: 24% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	
 }
 
-.shop:hover {
-	background: url('../img/onstorebtn.png') no-repeat center center;
-	background-size: cover;
-	width: 51px;
-	height: 84px;
+.myinfo-btn:hover {
+	background-image: url('../img/on-myinfobtn.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%;
+	height: 100%;
 	border: none;
-	transition: transform 0.2s ease;
+	margin: 20% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	cursor: pointer;
+}
+.in-collection-btn {
+	background-image: url('../img/incollectionbtn.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%;
+	height: 100%;
+	border: none;
+	margin: 35% 0% -37% 0%;
+	padding: 43% 0% 0% 0%;
+	cursor: pointer;}
+	
+.collection-btn {
+	background-image: url('../img/collectionbtn.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%;
+	height: 100%;
+	border: none;
+	margin: 24% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	cursor: pointer;
+}
+
+.collection-btn:hover {
+	background-image: url('../img/on-collectionbtn.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%;
+	height: 100%;
+	border: none;
+	margin: 20% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	cursor: pointer;
+}
+.in-store-btn {
+	background-image: url('../img/instorebtn.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%;
+	height: 100%;
+	border: none;
+	margin: 35% 0% -37% 0%;
+	padding: 43% 0% 0% 0%;
+	cursor: pointer;
+	}
+	
+.store-btn {
+	background-image: url('../img/storebtn.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%;
+	height: 100%;
+	border: none;
+	margin: 24% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	cursor: pointer;
+}
+
+.store-btn:hover {
+	background-image: url('../img/on-storebtn.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 50%;
+	width: 100%;
+	height: 100%;
+	border: none;
+	margin: 20% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	cursor: pointer;
+}
+
+.construction1 {
+	background: url('../img/c1.png') no-repeat center center;
+	background-size: contain;
+	background-position: right;
+	width: 30.2%;
+	height: 100%;
+	padding: 0% 0% 0% 0%;
+	margin: 0% 0% 0% 0%;
+}
+
+.construction2 {
+	background: url('../img/c2.png') no-repeat center center;
+	background-size: contain;
+	background-position: right;
+	width: 5%;
+	height: 100%;
+	padding: 0% 0% 0% 0%;
+	margin: 0% 0% 0% 0%;
+}
+
+.construction3 {
+	background: url('../img/c3.png') no-repeat center center;
+	background-size: contain;
+	background-position: right;
+	width: 5%;
+	height: 100%;
+	padding: 0% 0% 0% 0%;
+	margin: 0% 0% 0% 0%;
 }
