--- a/lolTradeGame/src/main/webapp/style/myinfo.css
+++ b/lolTradeGame/src/main/webapp/style/myinfo.css
@@ -1,162 +1,25 @@
 @charset "UTF-8";
 
-.bg {
-	background-image: url('../img/home.png');
-	background-size: cover;
-	width: 1280px;
-	height: 720px;
-	position: absolute;
+.bg {}
 
-}
-.menu {
-	background-image: url('../img/menubar.png');
-	background-size: cover;
-	background-repeat: no-repeat;
-	position: absolute;
-	width: 1280px;
-	height: 86px;
-	top: 0%;
-	right: 0%;
+.infopage {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	text-align: left;
 }
 
-.money {
-	position: absolute;
-	top: 0%;
-	left: 75%;
-	width: 100px;
-	height: 50px;
-	color: white;
+.myfag {
+	background: url('../img/liner-lobby.png') no-repeat center center;
+	background-size: contain;
+	width: 20%;
+	height: 85%;
+	margin: 0% 0% 0% 0%;
+	padding: 0% 0% 0% 0%;
+	border: none;
 }
-.gamestart {
-	position: absolute;
-	top: 3%;
-	right: 80%;
-	background: url('../img/startbnt.jpg') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 200px; /* 입력 상자의 너비 설정 */
-  	height: 50px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.gamestart:hover {
-	position: absolute;
-	top: 3%;
-	right: 80%;
-	background: url('../img/onstartbnt.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 200px; /* 입력 상자의 너비 설정 */
-  	height: 50px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.home {
-	position: absolute;
-	top: 0%;
-	left: 30%;
-	background: url('../img/homebtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-}
-.home:hover{
-	position: absolute;
-	top: 0%;
-	left: 30%;
-	background: url('../img/onhomebtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-}
-.myinfo {
-	position: absolute;
-	top: 0%;
-	left: 60%;
-	background: url('../img/inmyinfobtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-}
-.collection {
-	position: absolute;
-	top: 0%;
-	left: 64%;
-	background: url('../img/collectionbtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.collection:hover {
-	position: absolute;
-	top: 0%;
-	left: 64%;
-	background: url('../img/oncollectionbtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.shop {
-	position: absolute;
-	top: 0%;
-	left: 68%;
-	background: url('../img/store.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.shop:hover {
-	position: absolute;
-	top: 0%;
-	left: 68%;
-	background: url('../img/onstorebtn.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 51px; /* 입력 상자의 너비 설정 */
-  	height: 84px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
-.myfag{
-	position: absolute;
-	top: 5%;
-	left: 60%;
-	background: url('../img/player1.png') no-repeat center center;
-  	background-size: cover; /* 이미지 크기 조절 */
-  	width: 247px; /* 입력 상자의 너비 설정 */
-  	height: 645px; /* 입력 상자의 높이 설정 */
-  	border: none; /* 테두리 제거 */
-  	transition: transform 0.2s ease;
-}
+
 .recode {
-  position: relative; /* 부모 요소를 relative로 설정 */
-  top: 25%;
-  left: 5%;
-  background: url('../img/player1.png') no-repeat center center;
-  background-size: cover;
-  width: 670px;
-  height: 420px;
-  overflow-y: auto; /* 스크롤을 허용하는 속성 */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+	color: black;
 
-.recodesc {
-  background: url('../img/recodesc.png') no-repeat center center;
-  background-size: cover;
-  width: 655px;
-  height: 120px;
-  
-  padding-bottom: 20px;
-}
-.Text {
-	width: 1px;
-	height: 1px;
 }
